Only move to initial top-left position in table view on initial show

BUG:334577
FIXED-IN:2.8.4
REVIEW:118134